<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--<ImageView-->
                <!--android:src="@android:drawable/stat_sys_upload_done"-->
                <!--android:scaleType="centerCrop"-->
                <!--android:id="@+id/detail_image"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="200dp" />-->

            <com.hazelwood.partypal.Custom_IMAGEVIEW
                android:id="@+id/detail_image"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

            <LinearLayout
                android:background="@color/orange"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <TextView
                    android:textSize="42sp"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:id="@+id/party_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <Button
                    android:id="@+id/yesBTN"
                    android:background="@android:color/white"
                    android:textColor="#ff1fff1d"
                    android:layout_weight="1"
                    android:text="YES"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/noBTN"
                    android:background="@android:color/white"
                    android:textColor="#ffff0e18"
                    android:layout_weight="1"
                    android:text="NO"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="20sp"
                    android:textColor="@color/grey"
                    android:text="@string/text_host"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.hazelwood.partypal.Custom_GRIDVIEW
                    android:numColumns="2"
                    android:id="@+id/party_host_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    </LinearLayout>

                <TextView
                    android:textSize="20sp"
                    android:textColor="@color/grey"
                    android:text="@string/text_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textSize="24sp"
                    android:textColor="#ff37b9ff"
                    android:id="@+id/party_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textSize="20sp"
                    android:textColor="@color/grey"
                    android:text="@string/text_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textSize="24sp"
                    android:id="@+id/party_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textSize="20sp"
                    android:textColor="@color/grey"
                    android:text="@string/text_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textSize="24sp"
                    android:id="@+id/party_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textSize="20sp"
                    android:textColor="@color/grey"
                    android:text="@string/text_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textSize="24sp"
                    android:id="@+id/party_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>


</LinearLayout>